# Exoplanet-Detection

./: .gitignore  .pre-commit-config.yaml  README.md  fetch_real_kepler.py  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
landing/: package-lock.json  package.json
landing/src/: App.tsx  index.css
landing/src/components/: ContactFooter.tsx  ExplorationsSection.tsx  HeroSection.tsx  HomePage.tsx  JournalDetail.tsx  JournalSection.tsx  Layout.tsx  LoadingScreen.tsx  Navbar.tsx  SelectedWorksSection.tsx  StatsSection.tsx
notebooks/: exoplanet_detection.ipynb
scripts/: generate_social_preview.py
src/: data_utils.py  demo.py  features.py  model.py  pipeline.py  preprocessing.py
